kubernetes/utilities/gatus/gatus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatus
  namespace: utilities-priv
  labels:
    app.kubernetes.io/name: gatus
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 24h"
    keel.sh/match-tag: "true"
spec:
  # Cannot do more replicas since otherwise Gatus will send multiple alerts for the same failure (each pod will send an alert)
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: gatus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gatus
    spec:
      serviceAccountName: gatus
      terminationGracePeriodSeconds: 5
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - image: twinproduction/gatus:latest
          imagePullPolicy: Always
          name: gatus
          stdin: false
          tty: false
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
              add: ["NET_RAW"]
          resources:
            limits:
              cpu: 250m
              memory: 100M
            requests:
              cpu: 50m
              memory: 64M
          
          startupProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 20
            successThreshold: 1
          
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          volumeMounts:
            - mountPath: /config
              name: gatus-config
      volumes:
        - name: gatus-config
          configMap:
            name: gatus
